--- a/package.json
+++ b/package.json
@@ -43,11 +43,11 @@
   "dependencies": {},
   "devDependencies": {
     "@pearson-components/npm-scripts": "^0.5.1",
-    "autoprefixer": "^6.1.0",
+    "autoprefixer": "^7.1.4",
     "babel-core": "^6.23.1",
-    "babel-eslint": "^7.1.1",
-    "babel-jest": "^18.0.0",
-    "babel-loader": "^6.3.2",
+    "babel-eslint": "^8.0.0",
+    "babel-jest": "^21.0.2",
+    "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.1.8",
     "babel-preset-es2015": "^6.22.0",
@@ -55,45 +55,46 @@
     "babel-preset-stage-0": "^6.22.0",
     "babel-register": "^6.23.0",
     "browser-sync": "^2.10.0",
+    "chai": "^4.1.2",
     "colors": "~1.1.2",
     "commitizen": "^2.9.6",
     "conventional-changelog-cli": "^1.3.3",
-    "css-loader": "^0.26.1",
-    "cz-conventional-changelog": "^1.1.4",
-    "del": "^2.1.0",
+    "css-loader": "^0.28.7",
+    "cz-conventional-changelog": "^2.0.0",
+    "del": "^3.0.0",
     "enzyme": "^2.5.1",
-    "eslint": "^1.10.3",
+    "eslint": "^4.6.1",
     "eslint-loader": "^1.6.1",
-    "eslint-plugin-react": "~3.16.1",
-    "expect": "~1.18.0",
-    "expect-jsx": "~2.5.1",
-    "extract-text-webpack-plugin": "^2.1.2",
-    "file-loader": "^0.10.0",
-    "highlight.js": "^8.9.1",
-    "html-loader": "^0.4.5",
+    "eslint-plugin-react": "~7.3.0",
+    "expect": "~21.0.2",
+    "expect-jsx": "~3.0.0",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
+    "highlight.js": "^9.12.0",
+    "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.28.0",
     "ignore-styles": "~5.0.1",
     "image-webpack-loader": "^3.2.0",
-    "intl": "~1.1.0",
-    "jest": "16.0.2",
-    "jsdom": "^9.12.0",
-    "markdown-it": "^5.0.2",
+    "intl": "~1.2.5",
+    "jest": "21.0.2",
+    "jsdom": "^11.2.0",
+    "markdown-it": "^8.4.0",
     "node-sass": "^4.5.0",
     "prop-types": "^15.5.6",
     "react": "^15.3.0",
     "react-addons-test-utils": "^15.4.2",
     "react-dom": "^15.3.0",
-    "react-intl": "~2.0.1",
+    "react-intl": "~2.4.0",
     "react-phone-number-input": "^0.12.10",
     "react-router-dom": "^4.0.0-beta.6",
-    "react-transition-group": "^1.1.3",
+    "react-transition-group": "^2.2.0",
     "sass-loader": "^6.0.0",
-    "semver": "~5.1.0",
-    "sinon": "^2.2.0",
-    "style-loader": "^0.13.1",
+    "semver": "~5.4.1",
+    "sinon": "^3.2.1",
+    "style-loader": "^0.18.2",
     "url-loader": "^0.5.7",
-    "uuid": "2.0.2",
-    "webpack": "^2.2.1",
+    "uuid": "3.1.0",
+    "webpack": "^3.5.6",
     "webpack-dev-server": "^2.3.0"
   },
   "keywords": [
